@@ -25,7 +25,10 @@ module ElasticAPM
 
         def initialize(config)
           @config = config
-          @key_filters = KEY_FILTERS + config.custom_key_filters
+          @key_filters =
+            KEY_FILTERS +
+            config.custom_key_filters +
+            config.sanitize_field_names
         end
 
         def call(payload)
@@ -60,11 +63,11 @@ module ElasticAPM
         end
 
         def filter_key?(key)
-          @key_filters.any? { |regex| key.match regex }
+          @key_filters.any? { |regex| regex.match(key) }
         end
 
         def filter_value?(value)
-          VALUE_FILTERS.any? { |regex| value.match regex }
+          VALUE_FILTERS.any? { |regex| regex.match(value) }
         end
       end
     end
