@@ -43,6 +43,7 @@ endif::[]
 ===== Added
 
 - Pass along tracestate headers and add prefixless Traceparent header {pull}694[#694]
+- Add sanitize_field_names to replace custom_key_filters {pull}708[#708]
 
 [float]
 ===== Changed
